data/issues_nolabel/nolabel_test_3847.txt
Java compilation in rule '//tensorflow/examples/android:tensorflow_demo' failed

Issue
$ bazel build //tensorflow/examples/android:tensorflow_demo fails with the following error:
ERROR: /home/milan/tools/tensorflow/tensorflow/tensorflow/examples/android/BUILD:47:1: Java compilation in rule '//tensorflow/examples/android:tensorflow_demo' failed: java failed: error executing command external/local_jdk/bin/java -Xbootclasspath/p:external/bazel_tools/third_party/java/jdk/langtools/javac.jar -XX:+TieredCompilation '-XX:TieredStopAtLevel=1' -jar ... (remaining 2 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
tensorflow/examples/android/src/org/tensorflow/demo/CameraActivity.java:50: error: method does not override or implement a method from a supertype


(Verbose output below)
Environment info
Operating System: Ubuntu 14.04 LTS 64-bit
Installed version of CUDA and cuDNN: CUDA 7.5.18, CUDNN 5.0.5.  (Not essential for the issue)
TF installed from source, commit hash f646559
Bazel version 0.3.1 installed from repository.
Android settings in WORKSPACE:
android_sdk_repository(
    name = "androidsdk",
    api_level = 21,
    build_tools_version = "24.0.0",
    # Replace with path to Android SDK on your system
    path = "/home/milan/tools/Android/Sdk/",
)

android_ndk_repository(
    name="androidndk",
    path="/home/milan/tools/Android/Sdk/ndk-bundle/",
    api_level=21)

Steps to reproduce

(Build TF from branch r0.10)
bazel build //tensorflow/examples/android:tensorflow_demo --verbose_failures

What have you tried?

Originally, I had the same issue with Bazel 0.3.0. bazel clean and rebuilding didn't help.
sudo apt-get upgrade bazel to Bazel 0.3.1, bazel clean and rebuilding didn't help.

Logs or other output that would be helpful
(tfsource) milan@stroj:~/tools/tensorflow/tensorflow$ bazel build //tensorflow/examples/android:tensorflow_demo --verbose_failures
WARNING: Bazel Android NDK crosstools are based on Android NDK revision 11. The revision of the Android NDK given in android_ndk_repository rule 'androidndk' is '12.1.2977051'.
WARNING: /home/milan/tools/tensorflow/tensorflow/tensorflow/core/BUILD:638:12: in srcs attribute of cc_library rule //tensorflow/core:android_tensorflow_lib_lite: please do not import '//tensorflow/core/debug:debug_graph_utils.cc' directly. You should either move the file to this package or depend on an appropriate rule there.
 .. a number of similar warnings, skipping ..
WARNING: /home/milan/tools/tensorflow/tensorflow/tensorflow/core/BUILD:638:12: in srcs attribute of cc_library rule //tensorflow/core:android_tensorflow_lib_lite: please do not import '//tensorflow/core/util/ctc:ctc_loss_util.h' directly. You should either move the file to this package or depend on an appropriate rule there.
INFO: Found 1 target...
ERROR: /home/milan/tools/tensorflow/tensorflow/tensorflow/examples/android/BUILD:47:1: Java compilation in rule '//tensorflow/examples/android:tensorflow_demo' failed: java failed: error executing command 
  (cd /home/milan/.cache/bazel/_bazel_milan/2849cb88d02d6f4c5e9ffcff64d240c6/execroot/tensorflow && \
  exec env - \
    LC_CTYPE=en_US.UTF-8 \
  external/local_jdk/bin/java -Xbootclasspath/p:external/bazel_tools/third_party/java/jdk/langtools/javac.jar -XX:+TieredCompilation '-XX:TieredStopAtLevel=1' -jar external/bazel_tools/tools/jdk/JavaBuilder_deploy.jar @bazel-out/local-fastbuild/bin/tensorflow/examples/android/libtensorflow_demo.jar-2.params): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
tensorflow/examples/android/src/org/tensorflow/demo/CameraActivity.java:50: error: method does not override or implement a method from a supertype
  @Override
  ^
tensorflow/examples/android/src/org/tensorflow/demo/CameraActivity.java:66: error: cannot find symbol
    if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.M) {
                                                    ^
  symbol:   variable M
  location: class VERSION_CODES
tensorflow/examples/android/src/org/tensorflow/demo/CameraActivity.java:67: error: cannot find symbol
      return checkSelfPermission(PERMISSION_CAMERA) == PackageManager.PERMISSION_GRANTED && checkSelfPermission(PERMISSION_STORAGE) == PackageManager.PERMISSION_GRANTED;
             ^
  symbol:   method checkSelfPermission(String)
  location: class CameraActivity
tensorflow/examples/android/src/org/tensorflow/demo/CameraActivity.java:67: error: cannot find symbol
      return checkSelfPermission(PERMISSION_CAMERA) == PackageManager.PERMISSION_GRANTED && checkSelfPermission(PERMISSION_STORAGE) == PackageManager.PERMISSION_GRANTED;
                                                                                            ^
  symbol:   method checkSelfPermission(String)
  location: class CameraActivity
tensorflow/examples/android/src/org/tensorflow/demo/CameraActivity.java:74: error: cannot find symbol
    if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.M) {
                                                    ^
  symbol:   variable M
  location: class VERSION_CODES
tensorflow/examples/android/src/org/tensorflow/demo/CameraActivity.java:75: error: cannot find symbol
      if (shouldShowRequestPermissionRationale(PERMISSION_CAMERA) || shouldShowRequestPermissionRationale(PERMISSION_STORAGE)) {
          ^
  symbol:   method shouldShowRequestPermissionRationale(String)
  location: class CameraActivity
tensorflow/examples/android/src/org/tensorflow/demo/CameraActivity.java:75: error: cannot find symbol
      if (shouldShowRequestPermissionRationale(PERMISSION_CAMERA) || shouldShowRequestPermissionRationale(PERMISSION_STORAGE)) {
                                                                     ^
  symbol:   method shouldShowRequestPermissionRationale(String)
  location: class CameraActivity
tensorflow/examples/android/src/org/tensorflow/demo/CameraActivity.java:78: error: cannot find symbol
      requestPermissions(new String[] {PERMISSION_CAMERA, PERMISSION_STORAGE}, PERMISSIONS_REQUEST);
      ^
  symbol:   method requestPermissions(String[],int)
  location: class CameraActivity
8 errors
Target //tensorflow/examples/android:tensorflow_demo failed to build
INFO: Elapsed time: 3.327s, Critical Path: 2.99s